# ai-for-bharat-bharatvoice

./: .env  .env.example  .env.streamlit.example  API_DOCUMENTATION.md  CONTAINERIZATION_DEPLOYMENT_GUIDE.md  DATABASE_STORAGE_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_IMPLEMENTATION_SUMMARY.md  DEVELOPER_DOCUMENTATION.md  Dockerfile  Dockerfile.production  Dockerfile.streamlit  Dockerfile.worker  GATEWAY_IMPLEMENTATION_SUMMARY.md  PLATFORM_INTEGRATION_TESTS_SUMMARY.md  PROFILE_MANAGEMENT_IMPLEMENTATION.md  QUICK_START.md  README.md  REGIONAL_CONTEXT_IMPLEMENTATION_SUMMARY.md  STREAMLIT_DEPLOYMENT_GUIDE.md  STREAMLIT_IMPLEMENTATION_SUMMARY.md  STREAMLIT_SESSION_STATE_TESTS_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_3_6_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  USER_GUIDES.md  alembic.ini  amplify.yml  app.py  backend.py  check_test_structure.py  comprehensive_test_validation.py  design.md  docker-compose.production.yml  docker-compose.streamlit.yml  docker-compose.yml  manual_test_validation.py  (+49 more)
.kiro/specs/bharatvoice-assistant/: design.md  requirements.md  tasks.md
.kiro/specs/streamlit-web-interface/: .config.kiro  design.md  requirements.md  tasks.md
.streamlit/: config.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
config/production/: .env.production.template  external_apis.yaml
k8s/: app-deployment.yaml  backup-cronjob.yaml  configmap.yaml  hpa.yaml  monitoring.yaml  namespace.yaml  nginx-deployment.yaml  pdb.yaml  postgres.yaml  redis.yaml  secrets.yaml  vpa.yaml  worker-deployment.yaml
k8s/production/: app-deployment-ha.yaml  backup-disaster-recovery.yaml  monitoring-production.yaml  performance-optimization.yaml  postgres-ha.yaml  rate-limiting-ddos.yaml  redis-cluster.yaml  secrets-management.yaml  security-hardening.yaml  ssl-certificates.yaml
monitoring/: loki.yml  prometheus.yml  promtail.yml
monitoring/grafana/dashboards/: dashboard.yml
monitoring/grafana/datasources/: datasources.yml
monitoring/rules/: bharatvoice-alerts.yml
nginx/: nginx.conf
scripts/: backup-database.sh  configure-external-apis.py  deploy-production.sh  deploy.sh  disaster-recovery.sh  performance-testing.py  production-deployment-guide.md  restore-database.sh  set-permissions.ps1
src/bharatvoice/: __init__.py  main.py
src/bharatvoice/api/: __init__.py  accessibility.py  alerts.py  auth.py  context.py  gateway.py  health.py  middleware.py  voice.py
src/bharatvoice/cache/: __init__.py  cache_manager.py  redis_cache.py  strategies.py
src/bharatvoice/config/: __init__.py  settings.py
tests/: __init__.py  conftest.py  test_accessibility_properties.py  test_adaptive_learning_properties.py  test_api_client_health.py  test_api_client_tts.py  test_api_health.py  test_audio_input_properties.py  test_audio_processing_properties.py  test_auth_system.py  test_code_switching_detector.py  test_conversation_state_management.py  test_core_models.py  test_deployment_integration.py  test_error_handling_properties.py  test_indian_service_integration_properties.py  test_language_engine.py  test_language_selector_properties.py  test_main_workflow_integration.py  test_nlu_properties.py  test_nlu_service.py  test_offline_functionality_properties.py  test_performance_properties.py  test_platform_integration_properties.py  test_platform_integrations.py  test_processing_workflow_properties.py  test_regional_context_manager.py  test_response_generator.py  test_speech_recognition_properties.py  test_streamlit_offline_properties.py  test_streamlit_session_state_properties.py  test_system_extensibility_properties.py  test_translation_engine.py  test_translation_fidelity_property.py  test_tts_synthesis_properties.py  test_user_profile_manager.py  test_voice_processing.py
tests/utils/: network_simulator.py
(+83 files in other folders)
